Added a clickable 'email' link to any template displaying an email field.
Added Contracts:
Contracts were added and configuration found here:
AppBundle\
    Controller\ContractController
    Entity\Contract
    Form\
        Handler\ContractHandler
        Type\ContractType
    Model\
        Generator\ContractGenerator
        VariableModel\
            AbstractVariableModel
            SbwtVariableModel

Templates are located under the Resrouces/config/views/Contracts folder.

--- a/src/Stc/AppBundle/Resources/config/acl.yml
+++ b/src/Stc/AppBundle/Resources/config/acl.yml
@@ -53,3 +53,31 @@ stc_venue_delete:
     permission: DELETE
     group_name: ""
     bindings: ~
+
+stc_contract_view:
+    type: entity
+    class: StcAppBundle:Venue
+    permission: VIEW
+    group_name: ""
+    bindings: ~
+
+stc_contract_create:
+    type: entity
+    class: StcAppBundle:Venue
+    permission: CREATE
+    group_name: ""
+    bindings: ~
+
+stc_contract_update:
+    type: entity
+    class: StcAppBundle:Venue
+    permission: EDIT
+    group_name: ""
+    bindings: ~
+
+stc_contract_delete:
+    type: entity
+    class: StcAppBundle:Venue
+    permission: DELETE
+    group_name: ""
+    bindings: ~
