--- a/src/Stc/AppBundle/Resources/config/services.yml
+++ b/src/Stc/AppBundle/Resources/config/services.yml
@@ -5,6 +5,13 @@ parameters:
     stc_venue.entity.class: Stc\AppBundle\Entity\Venue
     stc_venue.venue.entity.class: Stc\AppBundle\Entity\Venue
     stc_venue.form.type.venue.class: Stc\AppBundle\Form\Type\VenueType
+    stc_contract.entity.class: Stc\AppBundle\Entity\Contract
+    stc_contract.contract.entity.class: Stc\AppBundle\Entity\Contract
+    stc_contract.form.type.contract.class: Stc\AppBundle\Form\Type\ContractType
+    stc_contract.form.handler.class: Stc\AppBundle\Form\Handler\ContractHandler
+    stc_contract.generator.class: Stc\AppBundle\Model\Generator\ContractGenerator
+    stc_contract.generator.variable_model.class: Stc\AppBundle\Model\VariableModel\AbstractVariableModel
+    stc_contract.form.type.contract_customizer.class: Stc\AppBundle\Form\Type\ContractCustomizerType
 
 services:
     stc_band.form.type.band:
@@ -19,3 +26,33 @@ services:
                 - %stc_venue.entity.class%
             tags:
                 - { name: form.type, alias: stc_venue }
+    stc_contract.form.type.contract:
+        class: %stc_contract.form.type.contract.class%
+        arguments:
+            - %stc_contract.entity.class%
+        tags:
+            - { name: form.type, alias: stc_contract }
+    stc_contract.form.handler:
+        class: %stc_contract.form.handler.class%
+        scope: request
+        arguments:
+            - @stc_contract.form
+            - @request
+            - @doctrine.orm.entity_manager
+            - @oro_tag.tag.manager
+            - @security.context
+    stc_contract.form:
+        class: Symfony\Component\Form\Form
+        factory_method: createNamed
+        factory_service: form.factory
+        arguments:
+            - "stc_contract"
+            - "stc_contract"
+    stc_contract.generator:
+        class: %stc_contract.generator.class%
+        arguments:
+            - @twig
+    stc_contract.form.builder.contract_customizer:
+        class: %stc_contract.form.type.contract_customizer.class%
+        tags:
+            - { name: form.type, alias: stc_contract_customizer }
